--- a/zola/templates/base.html
+++ b/zola/templates/base.html
@@ -21,6 +21,7 @@
   </head>
   <body>
     {% include "components/header.html" %}
-    <main>{% block content %}{% endblock content %}</main>
+    <main class="container">{% block content %}{% endblock content %}</main>
+    {% include "components/footer.html" %}
   </body>
 </html>
