--- a/zola/sass/_reset.scss
+++ b/zola/sass/_reset.scss
@@ -24,11 +24,6 @@ body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   font:
-    16px/1.7 system-ui,
-    -apple-system,
-    Segoe UI,
-    Roboto,
-    "Hiragino Sans",
-    "Noto Sans JP",
+    16px/1.7 "M PLUS 1p",
     sans-serif;
 }
