feat: impl top, impl footer

--- a/zola/templates/components/footer.html
+++ b/zola/templates/components/footer.html
@@ -1,1 +1,6 @@
-<footer></footer>
+<footer>
+  <small>
+    &copy; 2018 Academic Collaboration Promotional Laboratory All Rights
+    Reserved.
+  </small>
+</footer>
