--- a/zola/sass/_layout.scss
+++ b/zola/sass/_layout.scss
@@ -37,11 +37,53 @@ header {
   }
 }
 
+footer {
+  border-top: solid #dee2e6;
+  text-align: center;
+  padding-block: 3rem 1.5rem;
+  margin-top: 4rem;
+  small {
+    font-size: 0.8em;
+  }
+}
+
+h2 {
+  font-size: 1.8em;
+  border-bottom: solid #dee2e6;
+  font-weight: 400;
+  margin-bottom: 0.5rem;
+}
+
+h3 {
+  font-size: 1.5em;
+  font-weight: 400;
+  margin-bottom: 0.5rem;
+}
+
+p {
+  margin-bottom: 1em;
+}
+
+.pc-row {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2em;
+
+  @include utils.media(md) {
+    display: contents;
+  }
+}
+
+.flex-1 {
+  flex: 1;
+  min-width: 0;
+}
+
 .container {
   width: 100%;
   max-width: 1140px;
   margin: 0 auto;
-  padding: 1rem 1rem;
+  padding: 1rem;
 
   @include utils.media(lg) {
     max-width: 720px;
