--- a/zola/templates/index.html
+++ b/zola/templates/index.html
@@ -1,5 +1,31 @@
 {% extends "base.html" %}
 
 {% block content %}
-  {{ section.content | safe }}
+  <h2>産学間連携推進室とは</h2>
+  <p>
+    産学間連携推進室では主に研究室配属前の学類生を中心に各自各々の問題意識を持ち、それらに対する解決策を日々探求しています。
+    産学間連携推進室で現在行われているプロジェクトはプロジェクト一覧をご覧ください。
+  </p>
+  <h2>入室について</h2> 
+  <p>
+    産学間連携推進室では所属学類・学群を問わず、研究への強い意志を持った方を迎え入れています。
+    入室の応募や見学対応は随時行っておりますので、まずはお問い合わせからご連絡ください。
+  </p>
+  <div class="pc-row">
+    <div class="flex-1">
+      <h2>お知らせ</h2>
+    </div>
+    <div class="flex-1">
+      <h2>年次報告会について</h2>
+      <p>産学間連携推進室では、毎年2月〜6月に年次報告会を実施しています。</p>
+      <p>2024年度は以下の通り実施いたします。</p>
+      <h3>2024年度年次報告会開催概要</h3>
+      <dl>
+        <dt>日時</dt>
+        <dd>2025年4月13日（日）13時〜</dd>
+        <dt>場所</dt>
+        <dd>第三エリアA棟3A202</dd>
+      </dl>
+    </div>
+  </div>
 {% endblock content %}
