feat: impl news

--- a/sass/global.scss
+++ b/sass/global.scss
@@ -1,5 +1,6 @@
 @use "reset";
 @use "layout";
 @use "members";
+@use "news";
 
 @import url("https://fonts.googleapis.com/css2?family=M+PLUS+1p&display=swap");
