--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -1,3 +1,5 @@
+{% set current = current_path | default(value="") %}
+
 <header>
   <div>
     <img alt="産学間連携推進室" src="/img/logo.png" />
@@ -5,7 +7,7 @@
   <nav class="container">
     {% for item in config.extra.nav %}
       {% set href = item.path %}
-      {% set is_current = current_path == href %}
+      {% set is_current = current == href %}
       <a href="{{ href }}"
         {% if is_current %}aria-current="page"{% else %}aria-current="false"{% endif %}>
         {{ item.title }}
