fix: jump home if click logo images

--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -2,7 +2,9 @@
 
 <header>
   <div>
-    <img alt="産学間連携推進室" src="/img/logo.png" />
+    <a href="/" aria-label="ホーム">
+      <img alt="産学間連携推進室" src="/img/logo.png" />
+    </a>
   </div>
   <nav class="container">
     {% for item in config.extra.nav %}
