fix : better alt

--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -3,7 +3,7 @@
 <header>
   <div>
     <a href="/" aria-label="ホーム">
-      <img alt="産学間連携推進室" src="/img/logo.png" />
+      <img alt="産学間連携推進室のロゴ" src="/img/logo.png" />
     </a>
   </div>
   <nav class="container">
