Add OGP, favicon, and logo link styling

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,7 @@
     <meta name="description" content="{{ description }}" />
     <meta name="author" content="{{ config.author | default(value='') }}" />
     <meta name="generator" content="zola 0.21.0" />
+    <link rel="icon" href="/favicon.ico" sizes="any">
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="{{ config.title }}" />
     <meta property="og:title" content="{{ title }}" />
