--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -1,8 +1,8 @@
 {% set current = current_path | default(value="") %}
 
 <header>
-  <div>
-    <a href="/" aria-label="ホーム">
+  <div class="site-header__logo">
+    <a class="site-header__logo-link" href="/" aria-label="ホーム">
       <img alt="産学間連携推進室のロゴ" src="/img/logo.png" />
     </a>
   </div>
