--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,20 +1,32 @@
 @use "utils";
 
 header {
-  div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  .site-header__logo {
+    text-align: center;
     padding: 200px 0;
-    img {
-      width: min(800px, 50%);
+    width: 100%;
+    flex: 0 0 100%;
+  }
+
+  .site-header__logo-link {
+    display: block;
+    width: 100%;
+  }
+
+  .site-header__logo-link img {
+    display: block;
+    margin: 0 auto;
+    width: min(800px, 50%);
+    height: auto;
+  }
+
+  @include utils.media(md) {
+    .site-header__logo {
+      padding: 30px 0;
     }
 
-    @include utils.media(md) {
-      padding: 30px 0;
-      img {
-        width: 80%;
-      }
+    .site-header__logo-link img {
+      width: 80%;
     }
   }
   nav {
